fix caption for full-bleed photo with middle caption

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -698,12 +698,11 @@ The first (most recent) post in the list is styled to be bigger than the others 
 }
 
 .post-full-content figcaption {
-    text-align: center;
     font-family: var(--fontSerif);
     font-style: italic;
     line-height: 1.5em;
-    padding-left: 1em;
-    padding-right: 1em;
+    padding-left: 2em;
+    padding-right: 2em;
 }
 
 /* ALIGNMENT */
@@ -740,6 +739,7 @@ The first (most recent) post in the list is styled to be bigger than the others 
 }
 
 
+
 @media (min-width: 768px) {
     .post-full-content figure.to-full figcaption {
         position: absolute;
@@ -749,10 +749,15 @@ The first (most recent) post in the list is styled to be bigger than the others 
         background: rgba(0,0,0,0.9);
         padding: 1em;
         color: var(--colorTextLight);
+        text-align: center;
+    }
+
+    .post-full-content figure.to-full figcaption p {
+        color: var(--colorTextLight);
     }
 }
 
-@media (min-width: 1040px) {
+@media (min-width: 940px) {
     .post-full-content figure.to-full figcaption.to-left {
         top: 25%;
         bottom: auto;
@@ -776,6 +781,24 @@ The first (most recent) post in the list is styled to be bigger than the others 
         padding: 1.5em;
         color: var(--colorTextDark);
     }
+
+    .post-full-content figure.to-full figcaption.to-middle {
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        padding: 2em 0;
+        background: rgba(0,0,0,0.5);
+        color: var(--colorTextLight);
+        text-shadow: 0 0 1px rgba(0,0,0,0.6);
+    }
+
+    .post-full-content figure.to-full figcaption.to-middle p{
+        max-width: 740px;
+        text-align: left;
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
 
 .post-template .kg-card-markdown > p:first-child {
@@ -790,11 +813,6 @@ The first (most recent) post in the list is styled to be bigger than the others 
 .post-full-content a:hover {
     color: var(--colorBrandHot);
     text-decoration: none;
-}
-
-.post-full-content strong,
-.post-full-content em {
-    color: var(--colorDark);
 }
 
 .post-full-content small {
